--- a/src/fonts.css
+++ b/src/fonts.css
@@ -3,10 +3,9 @@
     font-family: 'Inter';
     font-style: normal;
     font-weight: 200;
-    src: local(''),
-         url('./fonts/inter-v11-latin-200.woff2') format('woff2'), /* Super Modern Browsers */
+    src: url('./fonts/inter-v11-latin-200.woff2') format('woff2'), /* Super Modern Browsers */
          url('./fonts/inter-v11-latin-200.woff') format('woff'), /* Modern Browsers */
-         url('./fonts/inter-v11-latin-200.ttf') format('truetype'), /* Safari, Android, iOS */
+         url('./fonts/inter-v11-latin-200.ttf') format('truetype'); /* Safari, Android, iOS */
   }
   
   /* inter-300 - latin */
@@ -14,10 +13,9 @@
     font-family: 'Inter';
     font-style: normal;
     font-weight: 300;
-    src: local(''),
-         url('./fonts/inter-v11-latin-300.woff2') format('woff2'), /* Super Modern Browsers */
+    src: url('./fonts/inter-v11-latin-300.woff2') format('woff2'), /* Super Modern Browsers */
          url('./fonts/inter-v11-latin-300.woff') format('woff'), /* Modern Browsers */
-         url('./fonts/inter-v11-latin-300.ttf') format('truetype'), /* Safari, Android, iOS */
+         url('./fonts/inter-v11-latin-300.ttf') format('truetype'); /* Safari, Android, iOS */
   }
   
   /* inter-600 - latin */
@@ -25,10 +23,9 @@
     font-family: 'Inter';
     font-style: normal;
     font-weight: 600;
-    src: local(''),
-         url('./fonts/inter-v11-latin-600.woff2') format('woff2'), /* Super Modern Browsers */
+    src: url('./fonts/inter-v11-latin-600.woff2') format('woff2'), /* Super Modern Browsers */
          url('./fonts/inter-v11-latin-600.woff') format('woff'), /* Modern Browsers */
-         url('./fonts/inter-v11-latin-600.ttf') format('truetype'), /* Safari, Android, iOS */
+         url('./fonts/inter-v11-latin-600.ttf') format('truetype'); /* Safari, Android, iOS */
   }
   
   /* ibm-plex-mono-300 - latin */
@@ -36,9 +33,8 @@
     font-family: 'IBM Plex Mono';
     font-style: normal;
     font-weight: 300;
-    src: local(''),
-         url('./fonts/ibm-plex-mono-v12-latin-300.woff2') format('woff2'), /* Super Modern Browsers */
+    src: url('./fonts/ibm-plex-mono-v12-latin-300.woff2') format('woff2'), /* Super Modern Browsers */
          url('./fonts/ibm-plex-mono-v12-latin-300.woff') format('woff'), /* Modern Browsers */
-         url('./fonts/ibm-plex-mono-v12-latin-300.ttf') format('truetype'), /* Safari, Android, iOS */
+         url('./fonts/ibm-plex-mono-v12-latin-300.ttf') format('truetype'); /* Safari, Android, iOS */
   }
   
