--- a/src/index.css
+++ b/src/index.css
@@ -35,3 +35,21 @@ h2 {
 section {
   padding: 50px 0;
 }
+
+section:first-of-type {
+  padding: 0;
+}
+
+section:nth-of-type(2) {
+  padding-top: 0;
+}
+
+@media (min-width: 640px) {
+  h2 {
+    scroll-margin-top: 100px;
+    scroll-snap-margin-top: 100px;
+  }
+  section {
+    padding: 100px 0;
+  }
+}
