Finish main styling of site

--- a/src/index.css
+++ b/src/index.css
@@ -17,7 +17,7 @@ html {
   position: fixed;
   top: 0;
   left: 0;
-  background-image: url(./bg2.jpg);
+  background-image: url(./assets/bg2.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: 30% 50%;
